force-app/main/default/objects/Activity/fields/AECommentsTask__c.field-meta.xml
<CustomField>
    <fullName>AECommentsTask__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>