force-app/main/default/objects/Activity/fields/aircall__Connection_status__c.field-meta.xml
<CustomField>
    <fullName>aircall__Connection_status__c</fullName>
    <formula>IF( aircall__Has_connected__c , &#39;Connected&#39;, &#39;Not connected&#39;)</formula>
    <label>Connection status</label>
    <type>Text</type>
</CustomField>