force-app/main/default/objects/Activity/fields/aircall__Detailed_type__c.field-meta.xml
<CustomField>
    <fullName>aircall__Detailed_type__c</fullName>
    <formula>IF(CONTAINS(LOWER(Subject), &#39;missed&#39;), &#39;Missed call&#39;,
 IF(CONTAINS(LOWER(Subject), &#39;voicemail&#39;), &#39;Voicemail&#39;,
 IF(CONTAINS(LOWER(Subject), &#39;outbound unanswered&#39;), &#39;Outbound unanswered&#39;,
 IF(CONTAINS(LOWER(Subject), &#39;outbound&#39;), &#39;Outbound answered&#39;,
 IF(CONTAINS(LOWER(Subject), &#39;inbound&#39;), &#39;Inbound answered&#39;,
  TEXT(CallType) 
)))))</formula>
    <label>Detailed type</label>
    <type>Text</type>
</CustomField>