force-app/main/default/objects/Activity/fields/aircall__Has_connected__c.field-meta.xml
<CustomField>
    <fullName>aircall__Has_connected__c</fullName>
    <formula>ISPICKVAL(CallType, &#39;Inbound&#39;) &amp;&amp;  !aircall__Is_Missed_call__c &amp;&amp;  !aircall__Is_Voicemail__c</formula>
    <label>Has connected</label>
    <type>Checkbox</type>
</CustomField>