force-app/main/default/objects/Activity/fields/aircall__Is_Missed_call__c.field-meta.xml
<CustomField>
    <fullName>aircall__Is_Missed_call__c</fullName>
    <formula>BEGINS(LOWER(Subject), &#39;missed call&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Missed call</label>
    <type>Checkbox</type>
</CustomField>