force-app/main/default/objects/Activity/fields/aircall__Is_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>aircall__Is_Voicemail__c</fullName>
    <formula>BEGINS(&#39;voicemail&#39;, LOWER(Subject))</formula>
    <label>Is Voicemail</label>
    <type>Checkbox</type>
</CustomField>