force-app/main/default/objects/Activity/fields/CallBackDate__c.field-meta.xml
<CustomField>
    <fullName>CallBackDate__c</fullName>
    <label>Date de rappel souhaité</label>
    <type>DateTime</type>
</CustomField>