force-app/main/default/objects/Activity/fields/CallQualiflication__c.field-meta.xml
<CustomField>
    <fullName>CallQualiflication__c</fullName>
    <label>Issue du call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non qualifié</fullName>
            </value>
            <value>
                <fullName>Rendez-Vous</fullName>
            </value>
            <value>
                <fullName>Pas de réponse</fullName>
            </value>
            <value>
                <fullName>Rappel</fullName>
                <isActive>false</isActive>
                <label>Rappel</label>
            </value>
            <value>
                <fullName>Succès</fullName>
                <isActive>false</isActive>
                <label>Succès</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>