force-app/main/default/objects/Activity/fields/ConfirmationSmsSend__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationSmsSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si un sms de confirmation a été envoyé pour cet événement. Un batch Queueable tournant en tâche de fond utilise ce champ pour récupérer les événements nécessitant d&#39;envoyer un sms. Il coche la case une fois le sms envoyé.</description>
    <label>SMS de confirmation envoyé</label>
    <type>Checkbox</type>
</CustomField>