force-app/main/default/objects/Activity/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>Nom du contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>