force-app/main/default/objects/Activity/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>(en heures)</inlineHelpText>
    <label>Durée</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>