force-app/main/default/objects/Activity/fields/FirstRDV__c.field-meta.xml
<CustomField>
    <fullName>FirstRDV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1er RDV</label>
    <type>Checkbox</type>
</CustomField>