force-app/main/default/objects/Activity/fields/IssueDeLaRelance__c.field-meta.xml
<CustomField>
    <fullName>IssueDeLaRelance__c</fullName>
    <label>Issue de la relance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pas de réponse</fullName>
            </value>
            <value>
                <fullName>Relance reportée</fullName>
            </value>
            <value>
                <fullName>En réflexion</fullName>
            </value>
            <value>
                <fullName>Engagement Signature</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Proposition envoyée</fullName>
            </value>
            <value>
                <fullName>Perte Trop en amont</fullName>
            </value>
            <value>
                <fullName>Perte Concurrence</fullName>
            </value>
            <value>
                <fullName>Nouveau RDV</fullName>
                <isActive>false</isActive>
                <label>Nouveau RDV</label>
            </value>
            <value>
                <fullName>Perte</fullName>
                <isActive>false</isActive>
                <label>Perte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>