force-app/main/default/objects/Activity/fields/MailAddress__c.field-meta.xml
<CustomField>
    <fullName>MailAddress__c</fullName>
    <label>Adresse e-mail</label>
    <type>Email</type>
</CustomField>