force-app/main/default/objects/Activity/fields/MailResponse__c.field-meta.xml
<CustomField>
    <fullName>MailResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retour suite au Mail ?</label>
    <type>Checkbox</type>
</CustomField>