force-app/main/default/objects/Activity/fields/NewTryFail__c.field-meta.xml
<CustomField>
    <fullName>NewTryFail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Echec de la relance</label>
    <type>Checkbox</type>
</CustomField>