force-app/main/default/objects/Activity/fields/NoShow__c.field-meta.xml
<CustomField>
    <fullName>NoShow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne s&#39;est pas présenté</label>
    <type>Checkbox</type>
</CustomField>