force-app/main/default/objects/Activity/fields/Over__c.field-meta.xml
<CustomField>
    <fullName>Over__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminée</label>
    <type>Checkbox</type>
</CustomField>