force-app/main/default/objects/Activity/fields/PhoneWhoID__c.field-meta.xml
<CustomField>
    <fullName>PhoneWhoID__c</fullName>
    <description>phone du contact ou lead du whoId</description>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>