force-app/main/default/objects/Activity/fields/PostponementDate__c.field-meta.xml
<CustomField>
    <fullName>PostponementDate__c</fullName>
    <label>Date de report de relance</label>
    <type>DateTime</type>
</CustomField>