force-app/main/default/objects/Activity/fields/Relance__c.field-meta.xml
<CustomField>
    <fullName>Relance__c</fullName>
    <label>Relance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>Last Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>