force-app/main/default/objects/Activity/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher permettant de savoir s&#39;il on doit envoyer un SMS ou non</description>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>