force-app/main/default/objects/Activity/fields/SynchroGoogle__c.field-meta.xml
<CustomField>
    <fullName>SynchroGoogle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchro Google</label>
    <type>Checkbox</type>
</CustomField>