force-app/main/default/objects/Activity/fields/TaskHour__c.field-meta.xml
<CustomField>
    <fullName>TaskHour__c</fullName>
    <label>Heure de la tâche</label>
    <type>Time</type>
</CustomField>